# sniptly.com

./: CLAUDE.md  DEPLOY.md  index.html  netlify.toml
.claude/: settings.local.json
app/: index.html
backend/: .env.example  README.md  main.py  pyproject.toml
docs/: PRD.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
